--- a/securitypackages.yml
+++ b/securitypackages.yml
@@ -20,9 +20,19 @@
 - name: Install Fail2ban on Ubuntu 
   become: true
   apt:
-    install: fail2ban
+    install: fail2ban 
 
 - name: Install Crowdsec on Ubuntu 
   become: true
   apt:
     install: crowdsec
+
+- name: Run a command for Crowdsec Status Check
+  ansible.builtin.raw: systemctl status crowdsec
+  args:
+    executable: /bin/bash
+
+- name: Run a command for Fail2Ban Status Check
+  ansible.builtin.raw: systemctl status fail2ban
+  args:
+    executable: /bin/bash
