--- a/securitypackages.yml
+++ b/securitypackages.yml
@@ -1,38 +1,42 @@
+---
 # Playbook for Updating Security
 # Rocky/Fedora/CentOS/Alma script next -- notes for self: update this as reconfiguring next machine
-- name: Update and upgrade apt-get / apt packages on Ubuntu system
-  become: true
-  apt:
-    upgrade: yes
-    update_cache: yes
-    cache_valid_time: 5069 
+- hosts: localhost 
+  tasks:
+    
+    - name: Update and upgrade apt-get / apt packages on Ubuntu system
+      become: true
+      apt:
+        upgrade: yes
+        update_cache: yes
+        cache_valid_time: 5069 
 
-- name: Install Rkhunter on Ubuntu
-  become: true
-  apt:
-    install: rkhunter
+    - name: Install Rkhunter on Ubuntu
+      become: true
+      apt:
+        install: rkhunter
 
-- name: Install Tripwire on Ubuntu 
-  become: true
-  apt:
-    install: tripwire
+    - name: Install Tripwire on Ubuntu 
+      become: true
+      apt:
+        install: tripwire
 
-- name: Install Fail2ban on Ubuntu 
-  become: true
-  apt:
-    install: fail2ban 
+    - name: Install Fail2ban on Ubuntu 
+      become: true
+      apt:
+        install: fail2ban 
 
-- name: Install Crowdsec on Ubuntu 
-  become: true
-  apt:
-    install: crowdsec
+    - name: Install Crowdsec on Ubuntu 
+      become: true
+      apt:
+        install: crowdsec
 
-- name: Run a command for Crowdsec Status Check
-  ansible.builtin.raw: systemctl status crowdsec
-  args:
-    executable: /bin/bash
+    - name: Run a command for Crowdsec Status Check
+      ansible.builtin.raw: systemctl status crowdsec
+      args:
+        executable: /bin/bash
 
-- name: Run a command for Fail2Ban Status Check
-  ansible.builtin.raw: systemctl status fail2ban
-  args:
-    executable: /bin/bash
+    - name: Run a command for Fail2Ban Status Check
+      ansible.builtin.raw: systemctl status fail2ban
+      args:
+        executable: /bin/bash
